# QBLAS

./: CMakeLists.txt  README.md  benchmark.cpp  build.sh  perf_compare.cpp  quadblas.hpp  quadblas_core.hpp  quadblas_operations.hpp  quaddtype_tests.cpp  test.sh  test_quadblas.cpp
.github/workflows/: ci.yml
benchmarks/: benchmark.cpp  legacy_benchmark.cpp
include/quadblas/: quadblas.hpp
include/quadblas/algorithms/: level1.hpp  level2.hpp  level3.hpp
include/quadblas/core/: constants.hpp  platform.hpp  types.hpp
include/quadblas/detail/: blocking.hpp
include/quadblas/interface/: c_interface.hpp  cpp_classes.hpp
include/quadblas/memory/: allocation.hpp
include/quadblas/simd/: quad_vector.hpp
include/quadblas/threading/: openmp_utils.hpp
tests/: debug_test.cpp  run_debug.sh  test_sleef_simd.cpp
